HelloUltraviolet/Fixtures/RejectedSource/Attributes/TestMalformedCoverage/Source/Main.uv
//! Rejected source-native test attribute specimen for malformed coverage syntax.

[[test(covers("def.TestAttributeArgsOk"))]]
public procedure testMalformedCoverageReference() -> bool
|: => @result
{
    return true
}
